--- a/CacelApp/Views/Modulos/Pesajes/MantPesajes.xaml
+++ b/CacelApp/Views/Modulos/Pesajes/MantPesajes.xaml
@@ -7,6 +7,7 @@
         xmlns:converters="clr-namespace:CacelApp.Config.Converters"
         xmlns:controls="clr-namespace:CacelApp.Shared.Controls.DataTable"
         xmlns:form="clr-namespace:CacelApp.Shared.Controls.Form"
+        xmlns:loading="clr-namespace:CacelApp.Shared.Controls.Loading"
         mc:Ignorable="d"
         Title="{Binding Titulo}" 
         Height="910" 
@@ -125,7 +126,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-
+        <loading:LoadingOverlay Grid.RowSpan="3" Panel.ZIndex="99999" Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}"/>
         <!-- Header: Título y Estado principal -->
         <Border Grid.Row="0" 
                 Background="{StaticResource AppPrimaryBrush}"
