--- a/CacelApp/Views/Modulos/Dashboard/Dashboard.xaml
+++ b/CacelApp/Views/Modulos/Dashboard/Dashboard.xaml
@@ -312,7 +312,7 @@
                                                 <Grid>
                                                     <Grid.RowDefinitions>
                                                         <RowDefinition Height="Auto"/>
-                                                        <RowDefinition Height="250"/>
+                                                        <RowDefinition Height="*" MinHeight="150"/>
                                                     </Grid.RowDefinitions>
 
                                                     <!-- Header con nombre de cámara -->
